# ROS_HACK

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  package.xml  run_simulation.sh  setup.cfg  setup.py
drone_urdf/: drone.sdf  drone.urdf
install/: local_setup.sh  setup.sh
install/sjtu_drone_description/share/sjtu_drone_description/: package.bash  package.zsh
launch/: auto.launch.py  drone.launch.py  sim.launch.py
log/: latest_build
models/x3_uav/: model.sdf
src/: __init__.py  autonomous.py  autonomous_x4.py  pid_hover.py
src/control/: controller.py
src/gate_detection/: detect.py
src/navigation/: navigate.py
worlds/: aerial_nav.world  drone_world.sdf  our_world.sdf  quadcopter_custom.sdf  x4_gates_world.sdf
