<?xml version="1.0"?>
<package format="3">
  <name>ros_hack</name>
  <version>0.0.1</version>
  <description>ROS Hackathon Drone Package</description>
  <maintainer email="kar@todo.todo">kar</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros_gz_sim</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>